--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -14,6 +14,21 @@
  
 /* Tablet screen :768px. */
 @media (min-width: 768px) and (max-width: 991px) {
+
+    .hero-area { 
+        padding-top: 160px;
+        padding-bottom: 200px;
+    }
+
+    .solutions-area { 
+        background-size: cover; 
+    }
+    .footer-area p {
+        margin-bottom: 0px; 
+        margin-top: 30px;
+        font-size: 20px;
+    }
+
     .left-wrp h3 {
         font-size: 35px;
         line-height: 48px; 
@@ -42,20 +57,22 @@
         height: 100%;
         object-fit: cover;
         object-position: bottom;
-    }
-    .footer-area p { 
-        margin-bottom: 25px;
-    }
+    } 
 
+    .onboard-area { 
+        padding-top: 230px;
+        padding: 200px 0;
+        background-size: cover; 
+      }
+      
 }
 
  
 /* small screen :320px. */
 @media (max-width: 767px) {
-
     .hero-area { 
-        padding-top: 210px;
-        padding-bottom: 190px;
+        padding-top: 110px;
+        padding-bottom: 100px;
     }
     .hero-wrp h1 {
         font-size: 30px; 
@@ -72,8 +89,9 @@
         font-size: 20px; 
     }
     .title h2 {
-        font-size: 36px; 
-        line-height: 60px; 
+        font-size: 36px;
+        line-height: 40px;
+        margin-bottom: 20px;
     }
     .title p {
         margin: 0;
@@ -82,6 +100,7 @@
     }
     .sol-blk img { 
         margin-bottom: 30px;
+        max-width: 100px;
     }
     .sol-blk h4 { 
         font-size: 20px; 
@@ -105,10 +124,21 @@
         text-align: left;
     }
     .onboard-area { 
-        background-size: cover; 
+        background-size: cover;
+        padding: 255px 0;
+        position: relative;
+        top: -90px;
     }
-
-
+    .logo-area img {
+        max-width: 100px;
+    }
+    .header-area {
+        padding-top: 20px; 
+        margin-bottom: -15px;
+    }
+    .onboard-area .title {
+        margin-bottom: 43px;
+    }
     .left-wrp h3 {
         font-size: 29px;
         line-height: 39px;
@@ -219,5 +249,12 @@
     .right-links ul li a { 
         font-size: 20px; 
     }
- 
+    .solutions-area {
+        background-size: cover;
+        padding-bottom: 10px;
+        margin-bottom: 20px;
+    }
+    .contact-area { 
+        margin-top: -90px;
+    }
 } 
