--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,12 +1,75 @@
 /* Big screen :1200px. */
 @media (min-width: 1200px) and (max-width: 1500px) {
 
-
+    .contact-area img.snape-img { 
+        left: -340px;
+        max-width: 1035px;
+    }
 }
 
 
 /* Normal screen :992px. */
 @media (min-width: 992px) and (max-width: 1200px) {
+    .contact-area img.snape-img {
+        position: absolute;
+        bottom: 0;
+        left: -230px;
+        max-width: 800px;
+    }
+    .contact-form { 
+        border-radius: 50px;
+        padding: 40px;
+    }
+    .onboard-area { 
+        background-size: cover; 
+    }
+    .menu-area nav ul li a { 
+        margin-left: 30px; 
+    }
+    .left-wrp h3 {
+        font-size: 46px;
+        line-height: 55px; 
+        margin-bottom: 20px;
+    }
+    .left-wrp p { 
+        font-size: 20px;
+    }
+    .left.alblk { 
+        left: 35px;
+    }
+    .footer-area p {
+        font-size: 20px;  
+    }
+    .right-links ul li a {  
+        font-size: 20px; 
+    }
+    .contact-form form input, .contact-form form textarea, .contact-form form select { 
+        height: 55px;
+        border-radius: 10px;
+        margin-bottom: 30px;
+        padding-left: 20px;
+        font-size: 25px; 
+    }
+    .select span { 
+        top: 2px;
+    }
+    .contact-form form textarea {
+        height: 230px !IMPORTANT; 
+    }
+    .contact-form form button { 
+        margin-top: 40px;
+    }
+    .contact-wrp { 
+        padding-left: 20px;
+    }
+
+
+
+
+
+
+
+
 
 
 }
