--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,6 +1,9 @@
 /* Big screen :1200px. */
 @media (min-width: 1200px) and (max-width: 1500px) {
-
+    .hero-area { 
+        padding-top: 200px;
+        padding-bottom: 200px;
+    }
     .contact-area img.snape-img { 
         left: -340px;
         max-width: 1035px;
@@ -10,6 +13,10 @@
 
 /* Normal screen :992px. */
 @media (min-width: 992px) and (max-width: 1200px) {
+    .hero-area { 
+        padding-top: 200px;
+        padding-bottom: 200px;
+    }
     .contact-area img.snape-img {
         position: absolute;
         bottom: 0;
@@ -78,11 +85,10 @@
 /* Tablet screen :768px. */
 @media (min-width: 768px) and (max-width: 991px) {
 
-    .hero-area { 
-        padding-top: 160px;
-        padding-bottom: 200px;
+    .hero-area {
+        padding-top: 60px;
+        padding-bottom: 105px;
     }
-
     .solutions-area { 
         background-size: cover; 
     }
@@ -136,6 +142,9 @@
     .hero-area { 
         padding-top: 110px;
         padding-bottom: 100px;
+    }
+    .hero-area img { 
+        object-fit: cover; 
     }
     .hero-wrp h1 {
         font-size: 30px; 
